# incident-management-system

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/api/app/: __init__.py  main.py
backend/ingestion/app/: __init__.py  main.py
backend/models/ims/: Mttr.py  __init__.py  alerting.py  config.py  dashboard.py  database.py  rate_limit.py  schemas.py  sql_models.py  state.py
backend/scripts/: load_test.py
backend/tests/: test_debounce.py  test_state_and_rca.py
backend/workers/app/: __init__.py  main.py
docs/: PROMPTS.md  plan.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: main.tsx  styles.css
sample-data/: failures.json  simulate_failure.py
